# azpcc

./: Cargo.toml  LICENSE  README.md
src/: error.rs  fs.rs  main.rs
src/ast/: context.rs  declaration.rs  expressions.rs  mod.rs  statements.rs  translation_unit.rs  types.rs
src/codegen/: error.rs  mod.rs  triple.rs
src/codegen/x86_64/: declaration.rs  expression.rs  helpers.rs  instance.rs  instructions.rs  mod.rs  registers.rs  scratch.rs  sizes.rs  statement.rs
src/parser/: grammar.lalrpop  helpers.rs  mod.rs
src/preprocessor/: directive.rs  grammar.lalrpop  mod.rs
tests/: foo.c  hello.c  test.h
tests/files/unit/preproc/: defines.txt  fake_directive.txt  include_define.h  include_define.txt  include_local.h  include_local.txt  no_directives.txt
