[package]
name = "azpcc"
version = "0.1.0"
edition = "2024"
description = "The AZP C Compiler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
lalrpop = "0.22.1"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
faerie = "0.16.0"
lalrpop-util = { version = "0.21.0", features = ["lexer"] } # Add unicode flag if we wanna support that
target-lexicon = "0.11.2"

[dependencies.iced-x86]
version = "1.21.0"
default-features = false
features = ["std", "encoder", "code_asm"]
