[package]
name = "azpcc"
version = "0.1.0"
edition = "2024"
description = "The AZP C Compiler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
lalrpop = "0.22.1"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
colog = "1.3.0"
indexmap = "2.8.0"
lalrpop-util = { version = "0.21.0", features = ["lexer"] } # Add unicode flag if we wanna support that
log = "0.4.26"
target-lexicon = "0.11.2"
thiserror = "2.0.12"
